force-app/main/default/objects/Account/fields/bc_GrupoEconomico__c.field-meta.xml
<CustomField>
    <fullName>bc_GrupoEconomico__c</fullName>
    <label>Grupo Económico</label>
    <type>Lookup</type>
    <referenceTo>bc_Group__c</referenceTo>
    <relationshipLabel>Cuentas Miembro</relationshipLabel>
    <relationshipName>CuentasMiembro</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>