force-app/main/default/objects/Account/fields/bc_HasAccountPlan__c.field-meta.xml
<CustomField>
    <fullName>bc_HasAccountPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Account Plan</label>
    <type>Checkbox</type>
</CustomField>