force-app/main/default/objects/Account/fields/bc_TipoGrupo__c.field-meta.xml
<CustomField>
    <fullName>bc_TipoGrupo__c</fullName>
    <label>Tipo de Grupo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Grupo_Local</fullName>
                <label>Grupo Local</label>
            </value>
            <value>
                <fullName>Grupo_Regional</fullName>
                <label>Grupo Regional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>